--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '3.0.0'
+    id 'org.springframework.boot' version '3.0.1'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
 }
@@ -14,7 +14,19 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    //testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+}
+
+bootJar {
+
+}
+
+jar {
+    manifest() {
+        attributes "Main-Class": "my.example.ApplicationMain"
+    }
 }
 
 test {
