--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,9 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-    //testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 
 }
 
